# cv-engine-streamlit-ui

./: .dockerignore  Dockerfile  README.md  cv-engine-ui.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  buildkitd.toml
.github/actions/env-setup/: action.yml
.github/workflows/: ci.yml  deploy-to-dev 🚀.yml  deploy-to-stage 🚀.yml  pr.yml
deploy/cft-services/dev/: cv_engine_streamlit_ui.json  cv_engine_streamlit_ui_api_route.json  cv_engine_streamlit_ui_dependencies.json  cv_engine_streamlit_ui_env_variable.env  cv_engine_streamlit_ui_services.json
deploy/cft-services/stage/: cv_engine.json  cv_engine_dependencies.json  cv_engine_env_variable.env  cv_engine_services.json
scripts/: deploy_to_dev.sh  deploy_to_stage.sh  services_cft_bucket.sh  update_ecs_service.sh
