[tool.poetry]
name = "cv-engine-streamlit-ui"
version = "0.1.0"
description = "A streamlit application for cv-engine-service "
authors = ["Ananya Chepuri <ch.ananya@hingehealth.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
